zh version chapter1&2

--- a/zh/model-and-bean/0.1.md
+++ b/zh/model-and-bean/0.1.md
@@ -2,7 +2,7 @@ JFinal 2.1 新增了 Generator 用来极速生成 Model、BaseModel、MappingKit
 使用时通常只需配置 Generator 的四个参数即可:baseModelPackageName、 baseModelOutputDir、modelPackageName、modelOutputDir。四个参数分别表示 baseMode 的包名,
 baseModel 的输出路径,modle 的包名,model 的输出路径,以下是示例代码:
 
-```
+```java
 // base model 所使用的包名
 String baseModelPkg = "model.base";
 // base model 文件保存路径
