--- a/zh/quick-start/1.5.md
+++ b/zh/quick-start/1.5.md
@@ -2,18 +2,14 @@
 
 创建启动项如下图所示：
 
-  ![](images/1.5.1.png?raw=true)
+  ![](1.5.1.png?raw=true)
 
 鼠标右键点击Java Application并选择New菜单项，新建Java Application启动项，如下图所示：
    
-  ![](images/1.5.2.jpg?raw=true)
+  ![](1.5.2.jpg?raw=true)
 
 在右侧窗口中的Main class输入框中填入: com.jfinal.core.JFinal并点击Debug按钮启动项目，如下图所示：
   
-  ![](images/1.5.3.jpg?raw=true)
+  ![](1.5.3.jpg?raw=true)
    
-## links
-   * [目录](<preface.md>)
-   * 上一节: [添加 java 文件](<1.4.md>)
-   * 下一节: [开启浏览器看效果](<1.6.md>)
 
