--- a/zh/quick-start/1.6.md
+++ b/zh/quick-start/1.6.md
@@ -1,11 +1,6 @@
 #开启浏览器看效果
 
-打开浏览器在地址栏中输入: http://localhost/hello， 
+打开浏览器在地址栏中输入: http://localhost/hello,
 输出内容为Hello JFinal world证明项目框架搭建完成。
 如需完整demo示例请在此处下载：http://code.google.com/p/jfinal/downloads/list
-
-## links
-   * [目录](<preface.md>)
-   * 上一节: [启动项目](<1.5.md>)
-   * 下一章: [JFinalConfig](<2.md>)
 
