--- a/zh/quick-start/1.1.md
+++ b/zh/quick-start/1.1.md
@@ -5,30 +5,26 @@ JFinal 推荐使用Eclipse IDE for Java EE Developers做为开发环境。
    
 ##创建Dynamic Web Project
 
-  ![](images/1.1.png?raw=true)
+  ![](1.1.png?raw=true)
     
   
 ##填入项目基本信息
 
-  ![](images/1.2.png?raw=true)
+  ![](1.2.png?raw=true)
     
 注意：Target runtime 一定要选择<None>
    
 ##修改Default Output Folder，推荐输入WebRoot\WEB-INF\classes
 
-  ![](images/1.3.png?raw=true)
+  ![](1.3.png?raw=true)
     
 特别注意：此处的 Default out folder必须要与 WebRoot\WEB-INF\classes 目录完全一致才可以使用 JFinal 集成的 Jetty 来启动项目。
     
 ##修改Content directory，推荐输入WebRoot
 
-  ![](images/1.4.png?raw=true)
+  ![](1.4.png?raw=true)
     
 注意：此处也可以使用默认值WebContent， 但上一步中的WebRoot\WEB-INF\classes则需要改成WebContent\WEB-INF\classes才能对应上。
    
     
-## links
-  * [目录](<preface.md>)
-  * 上一节: [快速上手](<1.md>)
-  * 下一节: [放入 JFinal 库文件](<1.2.md>)
 
