--- a/zh/quick-start/1.4.md
+++ b/zh/quick-start/1.4.md
@@ -1,7 +1,7 @@
 #1.4 添加 java 文件
 
 在项目src目录下创建demo包，并在demo包下创建DemoConfig文件， 内容如下：
-
+```java
     package demo;
 	import com.jfinal.config.Constants;
 	import com.jfinal.config.Handlers;
@@ -20,10 +20,11 @@
 		public void configInterceptor(Interceptors me) {}
 		public void configHandler(Handlers me) {}
 	}
-	
+```	
 	注意：DemoConfig.java文件所在的包以及自身文件名必须与web.xml中的param-value标签内的配置相一致(在本例中该配置为demo.DemoConfig)。
 在demo包下创建HelloController类文件， 内容如下：
 
+```java
 	package demo;
 	import com.jfinal.core.Controller;
 	public class HelloController extends Controller {
@@ -31,9 +32,6 @@
 			renderText("Hello JFinal world.");
 		}
 	}
+```
 
-## links
-   * [目录](<preface.md>)
-   * 上一节: [修改 web.xml](<1.3.md>)
-   * 下一节: [启动项目](<1.5.md>)
 
