Create chapter3 for zh version

--- a/zh/jfinalconfig/2.1.md
+++ b/zh/jfinalconfig/2.1.md
@@ -5,6 +5,7 @@
 于对整个 web 项目进行配置。
 JFinalConfig 子类需要实现五个抽象方法,如下所示:
 
+```java
 	public class DemoConfig extends JFinalConfig {
 		public void configConstant(Constants me) {}
 		public void configRoute(Routes me) {}
@@ -12,8 +13,4 @@ JFinalConfig 子类需要实现五个抽象方法,如下所示:
 		public void configInterceptor(Interceptors me) {}
 		public void configHandler(Handlers me) {}
 	}
-## links
-   * [目录](<preface.md>)
-   * 上一节: [JFinalConfig](<2.md>)
-   * 下一节: [configConstant(Constants me)](<2.2.md>)
-
+```
