--- a/zh/jfinalconfig/2.6.md
+++ b/zh/jfinalconfig/2.6.md
@@ -2,11 +2,10 @@
 
 此方法用来配置JFinal的Handler，如下代码配置了名为ResourceHandler的处理器，Handler可以接管所有web请求，并对应用拥有完的控制权，可以很方便地实现更高层的功能性扩展。
 
+```java
 	public void configHandler(Handlers me) {
 		me.add(new ResourceHandler());
 	}
-## links
-   * [目录](<preface.md>)
-   * 上一节: [configInterceptor (Interceptors me)](<2.7.md>)
-   * 下一章: [Controller](<3.md>)
+```
+
 
