--- a/zh/model-and-bean/0.1.md
+++ b/zh/model-and-bean/0.1.md
@@ -14,4 +14,4 @@ String modelDir = baseModelDir + "/..";
 Generator gernerator = new Generator(dataSource, baseModelPkg, baseModelDir, modelPkg, modelDir);
 gernerator.generate();
 ```
-可在 JFinal 官网下载源码直接用于项目: [jfinal.com](http://www.jfinal.com "http://www.jfinal.com")
+可在 JFinal 官网下载源码直接用于项目: [www.jfinal.com](http://www.jfinal.com "http://www.jfinal.com")
