--- a/zh/quick-start/1.3.md
+++ b/zh/quick-start/1.3.md
@@ -1,5 +1,6 @@
 # 1.3 修改 web.xml
 
+```xml
 	<filter>
 		<filter-name>jfinal</filter-name>
 		<filter-class>com.jfinal.core.JFinalFilter</filter-class>
@@ -12,5 +13,5 @@
 		<filter-name>jfinal</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+```
 
