--- a/zh/quick-start/1.1.md
+++ b/zh/quick-start/1.1.md
@@ -10,24 +10,24 @@ JFinal 推荐使用Eclipse IDE for Java EE Developers做为开发环境。
    
 ##创建Dynamic Web Project
 
-  ![](1.1.png?raw=true)
+  ![](../images/1.1.png)
     
   
 ##填入项目基本信息
 
-  ![](1.2.png?raw=true)
+  ![](../images/1.2.png)
     
 **注意：** Target runtime 一定要选择<None>
    
 ##修改Default Output Folder，推荐输入WebRoot\WEB-INF\classes
 
-  ![](1.3.png?raw=true)
+  ![](../images/1.3.png)
 
 <font color="red">特别注意：此处的 Default out folder必须要与 WebRoot\WEB-INF\classes 目录完全一致才可以使用 JFinal 集成的 Jetty 来启动项目</font>。
     
 ##修改Content directory，推荐输入WebRoot
 
-  ![](1.4.png?raw=true)
+  ![](../images/1.4.png)
     
 **注意：** 此处也可以使用默认值WebContent， 但上一步中的WebRoot\WEB-INF\classes则需要改成WebContent\WEB-INF\classes才能对应上。
    
