--- a/zh/quick-start/1.5.md
+++ b/zh/quick-start/1.5.md
@@ -2,14 +2,14 @@
 
 创建启动项如下图所示：
 
-  ![](1.5.1.png?raw=true)
+  ![](../images/1.5.1.png)
 
 鼠标右键点击Java Application并选择New菜单项，新建Java Application启动项，如下图所示：
    
-  ![](1.5.2.jpg?raw=true)
+  ![](../images/1.5.2.jpg)
 
 在右侧窗口中的Main class输入框中填入: com.jfinal.core.JFinal并点击Debug按钮启动项目，如下图所示：
   
-  ![](1.5.3.jpg?raw=true)
+  ![](../images/1.5.3.jpg)
    
 
